# delta

./: .gitignore  .gitmodules  CMakeLists.txt
src/delta/: delta.cc  delta.hh
src/delta/backend/: backend.hh
src/delta/backend/directx11/: directx11_instance.cc  directx11_instance.hh
src/delta/backend/glfw/: glfw_window.cc  glfw_window.hh
src/delta/backend/metal/: metal_instance.cc  metal_instance.hh
src/delta/backend/opengl/: opengl_frame_buffer.cc  opengl_frame_buffer.hh  opengl_instance.cc  opengl_instance.hh  opengl_mesh.cc  opengl_mesh.hh  opengl_render_pass.cc  opengl_render_pass.hh  opengl_sampler_2d.cc  opengl_sampler_2d.hh  opengl_shader.cc  opengl_shader.hh  opengl_texture.cc  opengl_texture.hh  opengl_texture_2d.cc  opengl_texture_2d.hh  opengl_uniform_buffer.cc  opengl_uniform_buffer.hh  opengl_window.cc  opengl_window.hh
src/delta/backend/vulkan/: vulkan_instance.cc  vulkan_instance.hh  vulkan_window.cc  vulkan_window.hh
src/delta/backend/windows/: windows_window.cc  windows_window.hh
src/delta/delta/: color.cc  color.hh  instance.cc  instance.hh  render_target.hh  window.hh
src/delta/delta/model/: buffer_element.hh  buffer_layout.cc  buffer_layout.hh  mesh.hh
src/delta/delta/render_pass/: immediate_mode_render_pass.cc  immediate_mode_render_pass.hh  immediate_mode_render_pass_command_buffer.hh  render_pass.hh  render_pass_opcode.hh
src/delta/delta/shader/: shader.cc  shader.hh  shader_data_type.cc  shader_data_type.hh  shader_stage.hh  uniform_buffer.cc  uniform_buffer.hh
src/delta/delta/texture/: frame_buffer.cc  frame_buffer.hh  sampler_2d.cc  sampler_2d.hh  sampler_2d_bind_target.hh  static_texture.hh  texture.hh  texture_2d.cc  texture_2d.hh
src/delta/delta/utils/: exceptions.hh  logger.cc  logger.hh
src/depend/glad/: CMakeLists.txt
src/depend/glad/include/glad/: gl.h
src/depend/stb_image/: CMakeLists.txt
test/: CMakeLists.txt  main.cc
test/glsl/: entity.frag.glsl  entity.vert.glsl  final.frag.glsl  flat.frag.glsl  flat.vert.glsl
